# deeppp

./: CMakeLists.txt  LICENSE  README.md
src/: datacoder.h  layer.cpp  layer.h  math_functions.cpp  math_functions.h  mnistimage.h  mnistloader.cpp  mnistloader.h  random.cpp  random.h  restrictedboltzmannlayer.cpp  restrictedboltzmannlayer.h  timeserieslayer.h
